# GenAI

./: .gitignore  README.md  pyproject.toml
Agent/CrewAI/: basic.ipynb
Agent/CrewAI/Automated_Project_Planning/: action.ipynb
Agent/CrewAI/Lead_Scoring_and_mailing/: file.ipynb
Agent/Langgraph/: ollama_integration.ipynb
Agent/Langgraph/Adaptive_rag/: RAG.ipynb
Agent/Langgraph/clustering_naming/: cluster_naming_agent.py  workflow.py
Agent/Langgraph/finance_agent/: Nvidia_10K_20240128.txt  combining.ipynb  financial_analyst.ipynb  financial_analyst_addition.ipynb  stock_news.ipynb
Agent/Langgraph/mcq_generator/: generator.ipynb  generator.py
LLM/LLama/: model 3.2 1B.ipynb
LLM/understanding-llms/: overview.md
