[tool.poetry]
name = "genai"
version = "0.1.0"
description = ""
authors = ["Abhinavk910 <abhinavk910@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
pandas = "^2.2.3"
ollama = "^0.3.3"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.43"
crewai = "^0.76.9"
serpapi = "^0.1.5"
yfinance = "^0.2.51"
ta = "^0.11.0"
google-generativeai = "^0.8.3"
langchain-google-genai = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
